# jubilant-fiesta

./: README.md
SI_Eksamen/Data/: cron-job.js  data-encode.js  data-serialize.js  dump.sql  dump1.sql  file-parsing.py  invoices_mro_docs.html  media.js  package-lock.json  package.json
SI_Eksamen/Data/hello-world/: pyproject.toml
SI_Eksamen/Data/hello-world/hello_world/: hello_world.py
SI_Eksamen/Data/http-py-node/: receiver.js  sender.py
SI_Eksamen/Data/static/: output.txt
SI_Eksamen/Integrate/mail-service/: app.js  package-lock.json  package.json
SI_Eksamen/Integrate/okta-html/: package-lock.json  package.json  server.js
SI_Eksamen/Integrate/okta-html/public/: index.html
SI_Eksamen/Integrate/sms/: app.js  package-lock.json  package.json
SI_Eksamen/SSE/: app.js
SI_Eksamen/assignments/graphql/: package-lock.json  package.json  server.js
SI_Eksamen/assignments/redis-pub-sub/: app.js  package-lock.json  package.json
SI_Eksamen/assignments/serialize-marshall/: app.js  package.json
SI_Eksamen/assignments/two-server-files/server-a/: app.py
SI_Eksamen/assignments/two-server-files/server-b/: app.js  package-lock.json  package.json
SI_Eksamen/assignments/websocket/: app.js  dump.rdb
SI_Eksamen/documentation/backend/: .elastic.env  app.js  package-lock.json  package.json  rabbitmq.js
SI_Eksamen/documentation/backend/pdf-templates/: template.js
SI_Eksamen/env/env-node/: app.js  package-lock.json
SI_Eksamen/env/env-py/: env.py
SI_Eksamen/file-formdata/: app.js  dump.rdb  index.html  package-lock.json  package.json
(+1 files in other folders)
