[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["RasmusKEA <rasm937k@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
